--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --ssr",
-    "serve": "node dist-ssr/index.js"
+    "build": "node build.js",
+    "serve": "node dist/server/src/entry-server"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.9",
-    "vue-router": "^4.0.0-beta.6"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-beta.12"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.4",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/server-renderer": "^3.0.0",
     "express": "^4.17.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.9",
-    "@vue/server-renderer": "^3.0.0-rc.9"
+    "vite": "^1.0.0-rc.4"
   }
 }
